移植至 Forge 1.20.1
切换 Forge 1.20.1 构建配置和模组元数据。

适配 Forge 注册、事件、网络、配方、数据生成和集成代码。

重新生成 Forge 1.20.1 资源路径。