@@ -1,15 +1,13 @@
 package committee.nova.mods.skyresources3.common.recipe;
 
 import committee.nova.mods.skyresources3.init.registry.ModRecipeTypes;
-import com.mojang.serialization.Codec;
-import com.mojang.serialization.MapCodec;
-import com.mojang.serialization.codecs.RecordCodecBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 import java.util.List;
-import net.minecraft.core.HolderLookup;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
-import net.minecraft.network.codec.StreamCodec;
-import net.minecraft.util.ExtraCodecs;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.GsonHelper;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeSerializer;
@@ -17,11 +15,7 @@ import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
 
 public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInput> {
-    private static final Codec<List<ProcessIngredient>> INPUTS_CODEC =
-            ExtraCodecs.nonEmptyList(ProcessIngredient.CODEC.listOf());
-    private static final Codec<List<ItemStack>> OUTPUTS_CODEC =
-            ExtraCodecs.nonEmptyList(ItemStack.STRICT_CODEC.listOf());
-
+    private final ResourceLocation id;
     private final String group;
     private final String process;
     private final List<ProcessIngredient> inputs;
@@ -29,6 +23,7 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
     private final float parameter;
 
     public SkyResourcesProcessRecipe(
+            final ResourceLocation id,
             final String group,
             final String process,
             final List<ProcessIngredient> inputs,
@@ -41,6 +36,7 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
         if (outputs.isEmpty()) {
             throw new IllegalArgumentException("Process recipe outputs must not be empty");
         }
+        this.id = id;
         this.group = group;
         this.process = process;
         this.inputs = List.copyOf(inputs);
@@ -56,8 +52,8 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
     }
 
     @Override
-    public ItemStack assemble(final ProcessRecipeInput input, final HolderLookup.Provider registries) {
-        return this.outputs.isEmpty() ? ItemStack.EMPTY : this.outputs.getFirst().copy();
+    public ItemStack assemble(final ProcessRecipeInput input, final RegistryAccess registryAccess) {
+        return this.outputs.isEmpty() ? ItemStack.EMPTY : this.outputs.get(0).copy();
     }
 
     @Override
@@ -75,8 +71,8 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
     }
 
     @Override
-    public ItemStack getResultItem(final HolderLookup.Provider registries) {
-        return this.outputs.isEmpty() ? ItemStack.EMPTY : this.outputs.getFirst().copy();
+    public ItemStack getResultItem(final RegistryAccess registryAccess) {
+        return this.outputs.isEmpty() ? ItemStack.EMPTY : this.outputs.get(0).copy();
     }
 
     @Override
@@ -85,12 +81,17 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
     }
 
     @Override
-    public RecipeSerializer<? extends Recipe<ProcessRecipeInput>> getSerializer() {
+    public ResourceLocation getId() {
+        return this.id;
+    }
+
+    @Override
+    public RecipeSerializer<?> getSerializer() {
         return ModRecipeTypes.PROCESS_SERIALIZER.get();
     }
 
     @Override
-    public RecipeType<? extends Recipe<ProcessRecipeInput>> getType() {
+    public RecipeType<?> getType() {
         return ModRecipeTypes.PROCESS_TYPE.get();
     }
 
@@ -140,41 +141,43 @@ public final class SkyResourcesProcessRecipe implements Recipe<ProcessRecipeInpu
     }
 
     public static final class Serializer implements RecipeSerializer<SkyResourcesProcessRecipe> {
-        private static final MapCodec<SkyResourcesProcessRecipe> CODEC =
-                RecordCodecBuilder.mapCodec(instance -> instance.group(
-                        Codec.STRING.optionalFieldOf("group", "").forGetter(SkyResourcesProcessRecipe::group),
-                        ExtraCodecs.NON_EMPTY_STRING.fieldOf("process").forGetter(SkyResourcesProcessRecipe::process),
-                        INPUTS_CODEC.fieldOf("inputs").forGetter(SkyResourcesProcessRecipe::inputs),
-                        OUTPUTS_CODEC.fieldOf("outputs").forGetter(SkyResourcesProcessRecipe::outputs),
-                        Codec.FLOAT.optionalFieldOf("parameter", 0.0F).forGetter(SkyResourcesProcessRecipe::parameter)
-                ).apply(instance, SkyResourcesProcessRecipe::new));
-        private static final StreamCodec<RegistryFriendlyByteBuf, List<ProcessIngredient>> INPUTS_STREAM_CODEC =
-                ProcessIngredient.STREAM_CODEC.apply(ByteBufCodecs.list());
-        private static final StreamCodec<RegistryFriendlyByteBuf, List<ItemStack>> OUTPUTS_STREAM_CODEC =
-                ItemStack.STREAM_CODEC.apply(ByteBufCodecs.list());
-        private static final StreamCodec<RegistryFriendlyByteBuf, SkyResourcesProcessRecipe> STREAM_CODEC =
-                StreamCodec.composite(
-                        ByteBufCodecs.STRING_UTF8,
-                        SkyResourcesProcessRecipe::group,
-                        ByteBufCodecs.STRING_UTF8,
-                        SkyResourcesProcessRecipe::process,
-                        INPUTS_STREAM_CODEC,
-                        SkyResourcesProcessRecipe::inputs,
-                        OUTPUTS_STREAM_CODEC,
-                        SkyResourcesProcessRecipe::outputs,
-                        ByteBufCodecs.FLOAT,
-                        SkyResourcesProcessRecipe::parameter,
-                        SkyResourcesProcessRecipe::new
-                );
-
         @Override
-        public MapCodec<SkyResourcesProcessRecipe> codec() {
-            return CODEC;
+        public SkyResourcesProcessRecipe fromJson(final ResourceLocation id, final JsonObject json) {
+            final JsonArray inputJson = GsonHelper.getAsJsonArray(json, "inputs");
+            final List<ProcessIngredient> inputs = inputJson.asList().stream()
+                    .map(ProcessIngredient::fromJson)
+                    .toList();
+            final JsonArray outputJson = GsonHelper.getAsJsonArray(json, "outputs");
+            final List<ItemStack> outputs = outputJson.asList().stream()
+                    .map(element -> RecipeJsonUtil.stackFromJson(GsonHelper.convertToJsonObject(element, "output")))
+                    .toList();
+            return new SkyResourcesProcessRecipe(
+                    id,
+                    GsonHelper.getAsString(json, "group", ""),
+                    GsonHelper.getAsString(json, "process"),
+                    inputs,
+                    outputs,
+                    GsonHelper.getAsFloat(json, "parameter", 0.0F)
+            );
         }
 
         @Override
-        public StreamCodec<RegistryFriendlyByteBuf, SkyResourcesProcessRecipe> streamCodec() {
-            return STREAM_CODEC;
+        public SkyResourcesProcessRecipe fromNetwork(final ResourceLocation id, final FriendlyByteBuf buffer) {
+            final String group = buffer.readUtf();
+            final String process = buffer.readUtf();
+            final List<ProcessIngredient> inputs = buffer.readList(ProcessIngredient::fromNetwork);
+            final List<ItemStack> outputs = buffer.readList(FriendlyByteBuf::readItem);
+            final float parameter = buffer.readFloat();
+            return new SkyResourcesProcessRecipe(id, group, process, inputs, outputs, parameter);
+        }
+
+        @Override
+        public void toNetwork(final FriendlyByteBuf buffer, final SkyResourcesProcessRecipe recipe) {
+            buffer.writeUtf(recipe.group());
+            buffer.writeUtf(recipe.process());
+            buffer.writeCollection(recipe.inputs(), (target, input) -> input.toNetwork(target));
+            buffer.writeCollection(recipe.outputs(), FriendlyByteBuf::writeItem);
+            buffer.writeFloat(recipe.parameter());
         }
     }
 }
